return bad_request if the gender is not "m" or "w"